# OS-Ecosystem

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  MASTER_DESIGN.md  README.md  RELEASE_NOTES.md  ROADMAP.md  STRUCTURE.md  app.py
AI-Hub/: .env.example  .gitignore  README.md  constraints-release.txt  pyproject.toml
AI-Hub/config/: logging.example.yaml  settings.example.yaml
AI-Hub/docs/: API_CONTRACT.md  APPROVAL.md  ARCHITECTURE.md  DATA_CONTRACT.md  DESIGN_REVIEW.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_REPORT.md  MASTER_DESIGN.md  OPERATIONS.md  PROVIDER_ADAPTER_CONTRACT.md  RELEASE_CHECKLIST.md  RELEASE_REVIEW_v0.1.md  RELEASE_RUNBOOK.md  ROUTING_POLICY.md  SECURITY.md  STRUCTURE.md  TEST_PLAN.md
AI-Hub/src/ai_hub/: __init__.py
AI-Hub/src/ai_hub/application/: __init__.py  api_management_service.py  dashboard_query_service.py  execution_log_service.py  health_service.py  inference_service.py  model_registry_service.py  provider_management_service.py  settings_service.py  usage_analytics_service.py  usage_prediction_service.py
AI-Hub/src/ai_hub/bootstrap/: __init__.py  configuration.py  release_validation.py
AI-Hub/src/ai_hub/domain/: __init__.py
AI-Hub/src/ai_hub/infrastructure/: __init__.py
AI-Hub/src/ai_hub/presentation/: __init__.py
AI-Hub/src/ai_hub/utilities/: __init__.py  redaction.py
AI-Hub/tests/contract/provider_adapters/: test_adapters.py
AI-Hub/tests/integration/callers/: test_inference_flow.py
AI-Hub/tests/integration/persistence/: test_execution_repository.py  test_settings_repository.py
AI-Hub/tests/security/: test_architecture_boundaries.py
AI-Hub/tests/smoke/: test_operator_app.py
Enhancement-Capability/: CHANGELOG.md  MANIFEST.in  README.md  app.py  pyproject.toml  requirements.txt
Enhancement-Capability/src/enhancement_capability/: __init__.py
Enhancement-Capability/tests/: test_runtime.py
Personal-Secretary-Capability/: LICENSE  README.md  pyproject.toml  requirements.txt
Personal-Secretary-Capability/src/personal_secretary_capability/: __init__.py  models.py  service.py
Personal-Secretary-Capability/tests/: test_runtime.py
(+220 files in other folders)
