[build-system]
requires = ["setuptools>=75,<82"]
build-backend = "setuptools.build_meta"

[project]
name = "os-ecosystem-ai-hub"
version = "0.1.0"
description = "Provider-neutral AI operations platform for OS Ecosystem"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
ui = ["streamlit>=1.50,<2"]
openai = ["openai>=2,<3"]
gemini = ["google-genai>=1,<2"]
claude = ["anthropic>=0.70,<1"]
providers = [
  "openai>=2,<3",
  "google-genai>=1,<2",
  "anthropic>=0.70,<1",
]
dev = ["pytest>=8,<10"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
